# ClaudeCodeSwitch

./: .gitignore  CHANGELOG.md  CLAUDE.md  CMD_LIST.md  Cargo.toml  README.md
.claude/: settings.local.json
.github/workflows/: release.yml
docs/: PLAN.md  TROUBLESHOOTING.md  dev_execution_protocol.md  dev_master_specs.md
scripts/: build_universal.sh  install.sh
scripts/homebrew/: ccswitch.rb
src/: bundle.rs  config.rs  keychain.rs  lib.rs  main.rs  output.rs  process.rs  profiles.rs
src/cli/: mod.rs
src/commands/: add.rs  daemon.rs  export.rs  import.rs  init.rs  list.rs  mod.rs  remove.rs  status.rs  uninstall.rs  update.rs  use_profile.rs
src/daemon/: launchd.rs  mod.rs
tests/fixtures/: sample_profile.json
tests/integration/: cli_tests.rs  daemon_tests.rs  init_tests.rs  keychain_tests.rs  profile_tests.rs  uninstall_tests.rs
