[package]
name = "ccswitch"
version = "1.0.1"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
nix = { version = "0.29", features = ["signal", "process"] }
plist = "1"
dirs = "5"
log = "0.4"
env_logger = "0.11"
libc = "0.2"
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
base64 = "0.22"
rpassword = "7"

[dev-dependencies]
tempfile = "3"
serial_test = "3"

[[test]]
name = "profile_tests"
path = "tests/integration/profile_tests.rs"

[[test]]
name = "keychain_tests"
path = "tests/integration/keychain_tests.rs"

[[test]]
name = "cli_tests"
path = "tests/integration/cli_tests.rs"

[[test]]
name = "daemon_tests"
path = "tests/integration/daemon_tests.rs"

[[test]]
name = "init_tests"
path = "tests/integration/init_tests.rs"

[[test]]
name = "uninstall_tests"
path = "tests/integration/uninstall_tests.rs"
